--- a/net-45/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/net-45/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -201,6 +201,10 @@
     <Folder Include="Models\" />
     <Folder Include="Static\upload\" />
     <Folder Include="Views\Auth\" />
+    <Folder Include="Views\Department\" />
+    <Folder Include="Views\Menu\" />
+    <Folder Include="Views\Role\" />
+    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -211,10 +215,14 @@
     <Compile Include="Controllers\AuthManageController.cs" />
     <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\ConnectController.cs" />
+    <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PageController.cs" />
+    <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\SSOController.cs" />
     <Compile Include="Controllers\TestController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\WidgetController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
