--- a/net-45/Hiwjcn.Service/Hiwjcn.Service.csproj
+++ b/net-45/Hiwjcn.Service/Hiwjcn.Service.csproj
@@ -147,12 +147,12 @@
     <Compile Include="AuthClientService.cs" />
     <Compile Include="AuthScopeService.cs" />
     <Compile Include="AuthTokenService.cs" />
+    <Compile Include="SystemService.cs" />
     <Compile Include="TokenEventHandler.cs" />
     <Compile Include="AuthLoginService.cs" />
     <Compile Include="ClearDataBaseService.cs" />
     <Compile Include="MenuService.cs" />
     <Compile Include="MyService.cs" />
-    <Compile Include="QiniuHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DepartmentService.cs" />
     <Compile Include="PermissionService.cs" />
