--- a/net-45/ConsoleApp/App.config
+++ b/net-45/ConsoleApp/App.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <configSections>
     <!--注册日志组件-->
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <!--注册日志组件-->
   <log4net debug="false">
@@ -40,38 +41,34 @@
     <add key="CookieDomain" value="" />
     <!--允许跨域ajax的域名-->
     <add key="Origin_Allow" value="" />
-
     <!--域名用逗号隔开-->
     <add key="AllowDomains" value="" />
-
     <add key="SmptServer" value="smtp.epcservices.com.cn" />
     <add key="SmptLoginName" value="reception@epcservices.com.cn" />
     <add key="SmptPassWord" value="Colin5215" />
     <add key="SmptSenderName" value="EPC_WEBSITE" />
     <add key="SmptEmailAddress" value="reception@epcservices.com.cn" />
-
     <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
     <add key="KeepAliveUrl" value="http://colin.hiwj.cn/ " />
-
     <add key="SSOLoginUrl" value="http://localhost/account/login/" />
     <add key="SSOLogoutUrl" value="http://localhost/account/logoutsso/" />
     <add key="CheckLoginInfoUrl" value="http://localhost/account/CheckChildSiteToken/" />
-
     <add key="CallBackUrl" value="Account/GetCallBackResult/" />
     <add key="DefaultRedirectUrl" value="Page/Home/" />
-
     <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
     <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
     <add key="QiniuBucketName" value="hiwjcn" />
     <add key="QiniuBaseUrl" value="http://hiwjcn.qiniudn.com/" />
-
     <!--1年-->
     <add key="CookieExpiresMinutes" value="525600" />
     <add key="CacheExpiresMinutes" value="5" />
   </appSettings>
   <connectionStrings>
-    <add name="MySqlConnectionString" connectionString="Database=hiwjcn;Data Source=127.0.0.1;Port=3306;CharacterSet=utf8;User Id=root;Password=123" />
-    <add name="RedisConnectionString" connectionString="172.16.26.28:6379,password=1q2w3e4r5T" />
+    <add name="db_" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
+    <add name="db_sso" connectionString="User ID=sa;Initial Catalog=parties_sso;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
+    <add name="db" connectionString="database=epc_fc;server=rm-bp11t375b9wjyhjc4po.mysql.rds.aliyuncs.com;port=3306;characterset=utf8;user id=root;password=colin5566_;connectiontimeout=3" />
+    <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
+    <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -112,10 +109,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  
-<system.data>
-    <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.10.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-    </DbProviderFactories>
-  </system.data></configuration>
+</configuration>
