--- a/net-45/ConsoleApp/packages.config
+++ b/net-45/ConsoleApp/packages.config
@@ -5,6 +5,7 @@
   <package id="CsQuery" version="1.3.4" targetFramework="net45" />
   <package id="Dapper" version="1.50.2" targetFramework="net45" />
   <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="Fleck" version="0.14.0.59" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
