--- a/net-45/Hiwjcn.Web/Web.config
+++ b/net-45/Hiwjcn.Web/Web.config
@@ -32,7 +32,7 @@
   <connectionStrings>
     <add name="db_" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
     <add name="db_sso" connectionString="User ID=sa;Initial Catalog=parties_sso;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
-    <add name="db" connectionString="database=epc_fc;server=rm-bp11t375b9wjyhjc4po.mysql.rds.aliyuncs.com;port=3306;characterset=utf8;user id=root;password=colin5566_;connectiontimeout=3" />
+    <add name="db" connectionString="User ID=sa;Initial Catalog=auth_test;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
     <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
     <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
