--- a/net-45/Hiwjcn.Core/Hiwjcn.Core.csproj
+++ b/net-45/Hiwjcn.Core/Hiwjcn.Core.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Data\Auth\AuthTokenScopeRepository.cs" />
     <Compile Include="Data\EntityDB.cs" />
     <Compile Include="Data\SSODB.cs" />
+    <Compile Include="Data\SSORepo.cs" />
     <Compile Include="Entity\AuthClients.cs" />
     <Compile Include="Entity\MenuEntity.cs" />
     <Compile Include="Entity\ReqLogEntity.cs" />
