--- a/net-45/Hiwjcn.Web/Web.config
+++ b/net-45/Hiwjcn.Web/Web.config
@@ -63,9 +63,17 @@
     <add key="auth.client_security" value="auth.official.client.security" />
     <!--下面还要配置途虎api请求密钥，安全起见，没有放在项目中，发布的时候请注意加上-->
   </appSettings>
+  <!--
+    有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
+
+    可在 <httpRuntime> 标记上设置以下特性。
+      <system.Web>
+        <httpRuntime targetFramework="4.6.2" />
+      </system.Web>
+  -->
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.6.2">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
@@ -82,7 +90,7 @@
       <error statusCode="403" redirect="/ErrorPage/403.html" />
       <error statusCode="500" redirect="/ErrorPage/500.html" />
     </customErrors>
-    <pages validateRequest="false"></pages>
+    <pages validateRequest="false" />
     <!--<sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42424" timeout="30"></sessionState>-->
     <sessionState cookieName="SID" mode="Custom" customProvider="RedisSessionProvider">
       <providers>
@@ -156,6 +164,18 @@
       <dependentAssembly>
         <assemblyIdentity name="Common.Logging" publicKeyToken="af08829b84f0328e" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.4.1.0" newVersion="3.4.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reflection" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.Serialization.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.2.0" newVersion="4.1.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Reflection.TypeExtensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
