--- a/net-45/Hiwjcn.Framework/packages.config
+++ b/net-45/Hiwjcn.Framework/packages.config
@@ -4,7 +4,7 @@
   <package id="Autofac" version="4.6.2" targetFramework="net45" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
-  <package id="Dapper" version="1.50.2" targetFramework="net45" />
+  <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
@@ -16,8 +16,8 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
-  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
 </packages>
