--- a/net-45/Hiwjcn.Plugin.Page.Resume/Hiwjcn.Plugin.Page.Resume.csproj
+++ b/net-45/Hiwjcn.Plugin.Page.Resume/Hiwjcn.Plugin.Page.Resume.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Hiwjcn.Plugin.Page.Resume</RootNamespace>
     <AssemblyName>Hiwjcn.Plugin.Page.Resume</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
