--- a/net-45/Hiwjcn.Service/packages.config
+++ b/net-45/Hiwjcn.Service/packages.config
@@ -6,21 +6,26 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
-  <package id="Dapper" version="1.50.2" targetFramework="net45" />
+  <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
+  <package id="Ical.Net" version="4.0.6" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="NodaTime" version="2.0.2" targetFramework="net462" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
-  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net462" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
 </packages>
