--- a/net-45/Hiwjcn.Test/packages.config
+++ b/net-45/Hiwjcn.Test/packages.config
@@ -6,7 +6,7 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="5.2.0" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="5.2.0" targetFramework="net45" requireReinstallation="true" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
@@ -16,7 +16,7 @@
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
-  <package id="NEST" version="5.2.0" targetFramework="net45" />
+  <package id="NEST" version="5.2.0" targetFramework="net45" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NLog" version="1.0.0.505" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
@@ -24,17 +24,17 @@
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
-  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
   <package id="StringTemplate4" version="4.0.8" targetFramework="net45" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
-  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
-  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" />
-  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
