--- a/net-45/Hiwjcn.Web/packages.config
+++ b/net-45/Hiwjcn.Web/packages.config
@@ -8,7 +8,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net45" />
   <package id="Common.Logging.Log4Net1211" version="3.3.1" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="2.5.5" targetFramework="net45" />
+  <package id="Elasticsearch.Net" version="2.5.5" targetFramework="net45" requireReinstallation="true" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
@@ -24,16 +24,16 @@
   <package id="Microsoft.Web.RedisSessionStateProvider" version="2.2.5" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.10" targetFramework="net45" />
-  <package id="NEST" version="2.5.5" targetFramework="net45" />
+  <package id="NEST" version="2.5.5" targetFramework="net45" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="SharpRaven" version="1.5.1" targetFramework="net45" />
   <package id="SharpRaven.Log4Net" version="1.5.2" targetFramework="net45" />
-  <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net45" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net45" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
 </packages>
