--- a/net-45/Lib/packages.config
+++ b/net-45/Lib/packages.config
@@ -7,8 +7,8 @@
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Common.Logging" version="3.4.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.4.0" targetFramework="net45" />
-  <package id="Dapper" version="1.50.2" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net45" />
+  <package id="Dapper" version="1.50.2" targetFramework="net45" requireReinstallation="true" />
+  <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net45" requireReinstallation="true" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="ImageProcessor" version="2.5.6" targetFramework="net45" />
   <package id="log4net" version="2.0.7" targetFramework="net45" />
@@ -21,20 +21,20 @@
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.10" targetFramework="net45" />
-  <package id="NEST" version="2.4.6" targetFramework="net45" />
+  <package id="NEST" version="2.4.6" targetFramework="net45" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NPOI" version="2.3.0" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.9" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
-  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
-  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
-  <package id="ZXing.Net" version="0.16.2" targetFramework="net45" />
+  <package id="ZXing.Net" version="0.16.2" targetFramework="net45" requireReinstallation="true" />
 </packages>
