--- a/net-45/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/net-45/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -86,6 +86,9 @@
       <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Ical.Net, Version=4.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ical.Net.4.0.6\lib\netstandard1.3\Ical.Net.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
@@ -104,6 +107,9 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NodaTime, Version=2.0.2.0, Culture=neutral, PublicKeyToken=4226afe0d9b296d1, processorArchitecture=MSIL">
+      <HintPath>..\packages\NodaTime.2.0.2\lib\net45\NodaTime.dll</HintPath>
     </Reference>
     <Reference Include="Polly, Version=5.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Polly.5.4.0\lib\net45\Polly.dll</HintPath>
@@ -149,7 +155,16 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Reflection, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Reflection.4.3.0\lib\net462\System.Reflection.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Reflection.TypeExtensions, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Reflection.TypeExtensions.4.3.0\lib\net462\System.Reflection.TypeExtensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Runtime.Serialization.Primitives, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.Serialization.Primitives.4.3.0\lib\net46\System.Runtime.Serialization.Primitives.dll</HintPath>
+    </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ValueTuple, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.3.1\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
@@ -201,9 +216,9 @@
     <Folder Include="Areas\Crm\Controllers\" />
     <Folder Include="Areas\Crm\Models\" />
     <Folder Include="Areas\Crm\Views\Shared\" />
-    <Folder Include="Areas\Epc\Controllers\" />
     <Folder Include="Areas\Epc\Models\" />
     <Folder Include="Areas\Epc\Views\Shared\" />
+    <Folder Include="Areas\Epc\Views\X\" />
     <Folder Include="Models\" />
     <Folder Include="Static\upload\" />
     <Folder Include="Views\Auth\" />
@@ -219,12 +234,20 @@
     <Compile Include="App_Start\FullDependencyRegistrar.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Crm\CrmAreaRegistration.cs" />
+    <Compile Include="Areas\Epc\Controllers\CalendarController.cs" />
+    <Compile Include="Areas\Epc\Controllers\DashboardController.cs" />
+    <Compile Include="Areas\Epc\Controllers\DeviceController.cs" />
+    <Compile Include="Areas\Epc\Controllers\FcController.cs" />
+    <Compile Include="Areas\Epc\Controllers\IssueController.cs" />
+    <Compile Include="Areas\Epc\Controllers\PageController.cs" />
+    <Compile Include="Areas\Epc\Controllers\XController.cs" />
     <Compile Include="Areas\Epc\EpcAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CommonController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
+    <Compile Include="Controllers\OrgController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\PermissionController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
