--- a/net-45/Hiwjcn.Web/packages.config
+++ b/net-45/Hiwjcn.Web/packages.config
@@ -11,6 +11,7 @@
   <package id="Elasticsearch.Net" version="2.5.5" targetFramework="net45" requireReinstallation="true" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
+  <package id="Ical.Net" version="4.0.6" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.zh-Hans" version="5.2.3" targetFramework="net45" />
@@ -26,6 +27,7 @@
   <package id="MySql.Data.Entity" version="6.9.10" targetFramework="net45" />
   <package id="NEST" version="2.5.5" targetFramework="net45" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
+  <package id="NodaTime" version="2.0.2" targetFramework="net462" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="SharpRaven" version="1.5.1" targetFramework="net45" />
@@ -34,6 +36,9 @@
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
   <package id="System.Net.Http" version="2.0.20126.16343" targetFramework="net45" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.TypeExtensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
 </packages>
