--- a/net-45/Lib.extra/packages.config
+++ b/net-45/Lib.extra/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Akka" version="1.3.4" targetFramework="net462" />
+  <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net462" />
+  <package id="log4net" version="2.0.8" targetFramework="net462" />
+  <package id="NEST" version="2.4.6" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="Polly" version="5.8.0" targetFramework="net462" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net45" />
 </packages>
