--- a/net-45/Hiwjcn.Web/App_Data/Config/elk_sentry.config
+++ b/net-45/Hiwjcn.Web/App_Data/Config/elk_sentry.config
@@ -32,7 +32,7 @@
       </layout>
     </appender>
     <!--elastic search-->
-    <appender name="ElasticSearch" type="Lib.log.ESLogAppender,Lib">
+    <appender name="ElasticSearch" type="Lib.extra.log.ESLogAppender,Lib">
       <bufferSize value="10" />
       <filter type="log4net.Filter.LevelRangeFilter">
         <levelMin value="INFO" />
