--- a/net-45/Hiwjcn.Web/Web.config
+++ b/net-45/Hiwjcn.Web/Web.config
@@ -30,10 +30,10 @@
   <lib_rabbitmq HostName="mq.qipeilong.net" UserName="admin" Password="mypass" VirtualHost="/" />
   <lib_zookeeper SessionTimeOut="5000" Server="zk.qipeilong.net" MasterSlavePath="/" DistributedLockPath="/lock" />
   <connectionStrings>
-    <add name="db_" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
-    <add name="member_ship" connectionString="User ID=sa;Initial Catalog=auth_test;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
-    <add name="epc" connectionString="User ID=sa;Initial Catalog=IdentityServer;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
-    <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
+    <add name="member_ship" connectionString="database=member;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
+    <add name="epc" connectionString="database=epc;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
+
+    <add name="RedisConnectionString_" connectionString="redis.qipeilong.net:6479" />
     <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
   <appSettings>
