--- a/net-45/Hiwjcn.Service/packages.config
+++ b/net-45/Hiwjcn.Service/packages.config
@@ -20,6 +20,7 @@
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="Quartz" version="3.0.1" targetFramework="net462" />
+  <package id="Shouldly" version="3.0.0" targetFramework="net462" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net45" requireReinstallation="true" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net45" />
