--- a/net-45/Lib/Lib.csproj
+++ b/net-45/Lib/Lib.csproj
@@ -398,25 +398,19 @@
     <Compile Include="io\ZipHelper.cs" />
     <Compile Include="io\FileModel.cs" />
     <Compile Include="data\IDBTable.cs" />
-    <Compile Include="mvc\AutoFacControllerFactory.cs" />
     <Compile Include="mvc\BaseController.cs" />
-    <Compile Include="mvc\inject\InjectAttribute.cs" />
-    <Compile Include="mvc\inject\InjectHelper.cs" />
-    <Compile Include="mvc\inject\LoadNavigationBeforeActionExecutingAttribute.cs" />
-    <Compile Include="mvc\inject\RunBeforeAttribute.cs" />
+    <Compile Include="mvc\InjectHelper.cs" />
     <Compile Include="mvc\MyWebViewPage.cs" />
     <Compile Include="mvc\plugin\IRouteProvider.cs" />
     <Compile Include="mvc\plugin\PluginManager.cs" />
     <Compile Include="mvc\plugin\PluginRouteConfig.cs" />
-    <Compile Include="mvc\SignHelper.cs" />
+    <Compile Include="helper\SignHelper.cs" />
     <Compile Include="mvc\user\AccountHelper.cs" />
     <Compile Include="mvc\NameValueCollectionHelper.cs" />
     <Compile Include="mvc\HtmlExtensions.cs" />
     <Compile Include="mvc\user\LoginUserInfo.cs" />
     <Compile Include="mvc\ResultBundle.cs" />
     <Compile Include="mvc\user\ValidLoginBaseAttribute.cs" />
-    <Compile Include="mvc\view\IViewRenderService.cs" />
-    <Compile Include="mvc\view\RazorViewRenderService.cs" />
     <Compile Include="mvc\WebWorkContext.cs" />
     <Compile Include="net\HttpClientExtension.cs" />
     <Compile Include="net\HttpClientHelper.cs" />
