--- a/net-45/Hiwjcn.Web/Web.config
+++ b/net-45/Hiwjcn.Web/Web.config
@@ -91,12 +91,8 @@
       <error statusCode="500" redirect="/ErrorPage/500.html" />
     </customErrors>
     <pages validateRequest="false" />
-    <!--<sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42424" timeout="30"></sessionState>-->
-    <sessionState cookieName="SID" mode="Custom" customProvider="RedisSessionProvider">
+    <sessionState cookieName="SID" mode="InProc" customProvider="RedisSessionProvider">
       <providers>
-        <!--使用mysql保存session，使用mysql.web组件（安装此组建会自动添加很多配置节点，只要保留下面节点就可以了）-->
-        <!--http://dev.mysql.com/downloads/connector/net/ 选择source code下载-->
-        <add name="MySqlSessionProvider" type="Lib.mvc.MySQLSessionProvider,Lib" AppID="1024" />
         <!--也可以使用redis存储session，组件：RedisSessionStateProvider-->
         <!-- https://github.com/Azure/aspnet-redis-providers/wiki -->
         <!-- https://www.nuget.org/packages/Microsoft.Web.RedisSessionStateProvider/ -->
